# docs/swagger.json
@@ -106,6 +106,58 @@
                 }
             }
         },
+        "/api/v1/reservation/create": {
+            "post": {
+                "description": "create new reservation",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "api/v1/reservation/create"
+                ],
+                "summary": "create",
+                "parameters": [
+                    {
+                        "description": "ID NO NEED",
+                        "name": "reservation",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/github_com_ArtemRotov_account-balance-manager_internal_model.Reservation"
+                        }
+                    }
+                ],
+                "responses": {
+                    "201": {
+                        "description": "Created",
+                        "schema": {
+                            "$ref": "#/definitions/internal_controller_http_v1.createOutput"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/internal_controller_http_v1.ErrorOutput"
+                        }
+                    },
+                    "422": {
+                        "description": "Unprocessable Entity",
+                        "schema": {
+                            "$ref": "#/definitions/internal_controller_http_v1.ErrorOutput"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/internal_controller_http_v1.ErrorOutput"
+                        }
+                    }
+                }
+            }
+        },
         "/auth/sign-in": {
             "post": {
                 "description": "Sign in",
@@ -212,6 +264,30 @@
         }
     },
     "definitions": {
+        "github_com_ArtemRotov_account-balance-manager_internal_model.Reservation": {
+            "type": "object",
+            "properties": {
+                "account_id": {
+                    "type": "integer",
+                    "example": 12
+                },
+                "amount": {
+                    "type": "integer",
+                    "example": 12441
+                },
+                "id": {
+                    "type": "integer"
+                },
+                "order_id": {
+                    "type": "integer",
+                    "example": 11231
+                },
+                "service_id": {
+                    "type": "integer",
+                    "example": 134
+                }
+            }
+        },
         "github_com_ArtemRotov_account-balance-manager_internal_model.User": {
             "type": "object",
             "properties": {
@@ -243,7 +319,8 @@
             "type": "object",
             "properties": {
                 "user_id": {
-                    "type": "integer"
+                    "type": "integer",
+                    "example": 1
                 }
             }
         },
@@ -251,10 +328,21 @@
             "type": "object",
             "properties": {
                 "balance": {
-                    "type": "integer"
+                    "type": "integer",
+                    "example": 10000
                 },
                 "user_id": {
-                    "type": "integer"
+                    "type": "integer",
+                    "example": 1
+                }
+            }
+        },
+        "internal_controller_http_v1.createOutput": {
+            "type": "object",
+            "properties": {
+                "id": {
+                    "type": "integer",
+                    "example": 1
                 }
             }
         },
@@ -262,10 +350,12 @@
             "type": "object",
             "properties": {
                 "amount": {
-                    "type": "integer"
+                    "type": "integer",
+                    "example": 1000
                 },
                 "user_id": {
-                    "type": "integer"
+                    "type": "integer",
+                    "example": 1
                 }
             }
         },
@@ -273,10 +363,12 @@
             "type": "object",
             "properties": {
                 "balance": {
-                    "type": "integer"
+                    "type": "integer",
+                    "example": 1000
                 },
                 "user_id": {
-                    "type": "integer"
+                    "type": "integer",
+                    "example": 1
                 }
             }
         },
